--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../Layouts/Layout.astro";
+import Layout from '../layouts/Layout.astro'
 import Navbar from "../components/Navbar.astro";
 ---
 
