--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
     content="Portafolio"
   />
   </head>
-  <body class=" bg-white text-gray-900 dark:bg-gray-900 text-white">
+  <body class=" bg-white dark:bg-gray-900 text-white">
     <slot />
   </body>
   <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
