feat: Se agrega todo el mockup de la aplicacion

--- a/src/utils/data.astro
+++ b/src/utils/data.astro
@@ -1,16 +1,20 @@
 ---
     export const dataListNavbar = [
         {
-            label: 'Inicio',
-            to: '/'
-        },
-        {
             label: 'Acerca de',
             to: '#about'
         },
         {
             label: 'Hablidades',
             to: '#skills'
+        },
+        {
+            label: 'Proyectos',
+            to: '#proyects'
+        },
+        {
+            label: 'Contacto',
+            to: '#contact'
         }
     ]
 ---
