--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,33 +1,67 @@
 ---
-
+import ThemeButton from "./theme/ThemeButton.astro";
 import ItemsNavbar from "./ItemsNavbar.astro";
 ---
 
-<nav class="px-5 bg-white border-gray-200 dark:bg-gray-900">
-    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto">
-        <a 
-            href="/" 
-            class="flex items-center space-x-3 rtl:space-x-reverse">
-            <!-- <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" /> -->
-                <span 
-                    class="text-purple-600 font-semibold text-1xl dark:text-white"
-                >
-                    MUKE
-                </span>
-        </a>
-        <button 
-            data-collapse-toggle="navbar-default" 
-            type="button" 
-            class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" 
-            aria-controls="navbar-default" 
-            aria-expanded="false"
-        >
-            <span class="sr-only">Open main menu</span>
-            <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
-            </svg>
-        </button>
-        <ItemsNavbar /> 
+<div class="navbar bg-base-100 px-5 sticky-navbar z-50">
+    <div class="flex-grow ">
+        <div class="avatar">
+            <a href="#inicio" class="w-12 rounded">
+                <img src="../../public/kdl.png" alt="">
+            </a>
         </div>
+      <a class="font-semibold text-2xl pl-4" href="/"></a>
     </div>
-</nav>
+  
+    <div class="flex-none">
+      <!-- Botón de hamburguesa para pantallas pequeñas -->
+      <label for="my-drawer-4" class="btn btn-ghost md:hidden drawer-button">
+        <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block h-5 w-5 stroke-current">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
+        </svg>
+      </label>
+  
+      <ul class="menu menu-horizontal px-16 md:flex hidden" id="navbar-menu">
+       <ItemsNavbar/>
+        <ThemeButton/>
+      </ul>
+    </div>
+  </div>
+
+  <!-- Drawer Component -->
+<div class="drawer drawer-end z-10">
+    <input id="my-drawer-4" type="checkbox" class="drawer-toggle" />
+    <div class="drawer-content">
+      <!-- Aquí puedes añadir contenido adicional si es necesario -->
+    </div>
+    <div class="drawer-side">
+      <label for="my-drawer-4" aria-label="close sidebar" class="drawer-overlay"></label>
+      <ul class="menu bg-base-200 text-base-content min-h-full w-80 p-4 z-50">
+        <ItemsNavbar />
+        <ThemeButton/>
+      </ul>
+    </div>
+  </div>
+  
+  
+  
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const savedTheme = localStorage.getItem('theme');
+      if (savedTheme) {
+        document.documentElement.setAttribute('data-theme', savedTheme);
+      }
+      document.querySelectorAll('[data-set-theme]').forEach(button => {
+        button.addEventListener('click', () => {
+          const theme = button.getAttribute('data-set-theme');
+          localStorage.setItem('theme', theme);
+          document.documentElement.setAttribute('data-theme', theme);
+        });
+      });
+    });
+
+    document.getElementById('menu-toggle').addEventListener('click', () => {
+        const navbarMenu = document.getElementById('navbar-menu');
+        navbarMenu.classList.toggle('hidden');
+    });
+  </script>
