--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ const { title } = Astro.props;
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/kdl.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{title}</title>
     <meta
@@ -18,20 +18,38 @@ const { title } = Astro.props;
     content="Portafolio"
   />
   </head>
-  <body class=" bg-white dark:bg-gray-900 text-white">
+  <body>
     <slot />
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
 </html>
 
-<style is:global>
-  @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
-  :root {
-    font-family: "Open Sans", sans-serif;
+<style is:global>
+  html {
+    scroll-behavior: smooth;
   }
 
-  html {
-    font-family: "Open Sans", sans-serif;
+  .hero{
+    view-timeline-name: --reveal;
+    animation-name: show;
+    animation-fill-mode: both;
+    animation-timeline: --reveal;
+    animation-range: entry -25% cover 50%;
+  }
+  .sticky-navbar {
+    position: sticky;
+    top: 0;
+    height: 3px;
+    z-index: 10; 
+  }
+
+  @keyframes show {
+    from{
+      opacity: 0; scale: -10%;
+    }
+
+    to{
+      opacity: 1; scale: 100%;
+    }
   }
 </style>
