--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,33 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import Navbar from "../components/Navbar.astro";
+import Header from "../components/Header.astro";
+import Acerca from "../components/Acerca.astro";
+import Habilidades from "../components/Habilidades.astro";
+import Proyectos from "../components/Proyectos.astro";
+import Contacto from "../components/Contacto.astro";
+import Footer from "../components/Footer.astro";
+
 ---
 
 <Layout title="Portafolio">
     <header class="relative max-w-screen-2x1 mx-auto mt-5">
         <Navbar/>
-        <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-800">
+        <div id="inicio">
+            <Header/>
+        </div>
+        <div id="about">
+            <Acerca/>
+        </div>
+        <div id="skills">
+            <Habilidades/>
+        </div>
+        <div id="proyects">
+            <Proyectos/>
+        </div>
+        <div id="contact">
+            <Contacto/>
+        </div>
+        <Footer/>
     </header>
 </Layout>
