fix: SEO y propiedades, Wave, borders

--- a/src/components/theme/ThemeButton.astro
+++ b/src/components/theme/ThemeButton.astro
@@ -10,7 +10,7 @@ import { dataColorTheme } from "../../utils/dataColorsTheme.astro";
         </svg>
         Themes
       </summary>
-      <ul class="bg-base-100 rounded-t-none z-50 h-[28.6rem] overflow-y-auto overflow-x-hidden">
+      <ul class="bg-base-100 rounded-md drop-shadow-2xl z-50 h-[28.6rem] overflow-y-auto overflow-x-hidden">
         {dataColorTheme.map(({ colors, name }) => (
           <div class="flex items-center justify-start">
             <button
