--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -7,15 +7,13 @@ import ItemsNavbar from "./ItemsNavbar.astro";
     <div class="flex-grow ">
         <div class="avatar">
             <a href="#inicio" class="w-12 rounded">
-                <img src="../../public/kdl.png" alt="">
+                <img src="/kdl.webp" alt="kdl" aria-label="img">
             </a>
         </div>
-      <a class="font-semibold text-2xl pl-4" href="/"></a>
     </div>
   
     <div class="flex-none">
-      <!-- Botón de hamburguesa para pantallas pequeñas -->
-      <label for="my-drawer-4" class="btn btn-ghost md:hidden drawer-button">
+      <label for="my-drawer-4" class="btn btn-ghost md:hidden drawer-button" aria-label="label">
         <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block h-5 w-5 stroke-current">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
         </svg>
@@ -28,20 +26,26 @@ import ItemsNavbar from "./ItemsNavbar.astro";
     </div>
   </div>
 
-  <!-- Drawer Component -->
-<div class="drawer drawer-end z-10">
+  <div class="drawer drawer-end z-10">
     <input id="my-drawer-4" type="checkbox" class="drawer-toggle" />
     <div class="drawer-content">
-      <!-- Aquí puedes añadir contenido adicional si es necesario -->
     </div>
     <div class="drawer-side">
       <label for="my-drawer-4" aria-label="close sidebar" class="drawer-overlay"></label>
-      <ul class="menu bg-base-200 text-base-content min-h-full w-80 p-4 z-50">
-        <ItemsNavbar />
-        <ThemeButton/>
+      <ul class="menu bg-base-200 text-base-content min-h-full w-80 p-4 z-50 relative">
+        <!-- Botón de cerrar (la "X") -->
+        <label for="my-drawer-4" class="absolute top-4 right-4 text-4xl cursor-pointer z-50" aria-label="Close">
+          &times;
+        </label>
+        <!-- Los elementos del menú -->
+         <div class="flex flex-col mt-10">
+          <ItemsNavbar />
+          <ThemeButton />
+         </div>
       </ul>
     </div>
   </div>
+  
   
   
   
@@ -58,10 +62,5 @@ import ItemsNavbar from "./ItemsNavbar.astro";
           document.documentElement.setAttribute('data-theme', theme);
         });
       });
-    });
-
-    document.getElementById('menu-toggle').addEventListener('click', () => {
-        const navbarMenu = document.getElementById('navbar-menu');
-        navbarMenu.classList.toggle('hidden');
     });
   </script>
