--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,13 +10,32 @@ const { title } = Astro.props;
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/kdl.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{title}</title>
-    <meta
-    name="description"
-    content="Portafolio"
-  />
+    <meta name="description" content="Portafolio muke78" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://portafolio-vercel-deploy.vercel.app/" />
+    <meta property="og:title" content="{title}" />
+    <meta property="og:description" content="Landing Page para proyecto de banco e inversiones online" />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://portafolio-vercel-deploy.vercel.app/" />
+    <meta property="twitter:title" content="{title}" />
+    <meta property="twitter:description" content="Landing Page para proyecto de banco e inversiones online" />
+    <meta property="twitter:image" content="https://portafolio-vercel-deploy.vercel.app/kdl.png" />
+    <!-- Otros metas importantes -->
+    <meta name="theme-color" content="rgba(111, 55, 207, 1)" />
+    <!-- Asegúrate de que el color refleje tu marca -->
+    <meta name="robots" content="index, follow" />
+    <!-- Cambiado a index, follow para permitir la indexación -->
+    <meta name="author" content="muke78" />
+    <meta name="copyright" content="Copyright © 2024" />
+    <link rel="icon" type="image/svg+xml" href="/kdl.webp" />
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://portafolio-vercel-deploy.vercel.app/" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body>
     <slot />
@@ -34,7 +53,7 @@ const { title } = Astro.props;
     animation-name: show;
     animation-fill-mode: both;
     animation-timeline: --reveal;
-    animation-range: entry -25% cover 50%;
+    animation-range: entry -15% cover 50%;
   }
   .sticky-navbar {
     position: sticky;
