--- a/src/components/Habilidades.astro
+++ b/src/components/Habilidades.astro
@@ -4,11 +4,216 @@
 ---
 
 <div class="hero bg-base-200 min-h-screen">
-    <div class="hero-content text-center">
-      <div class="max-w-lg">
-        <h1 class="text-6xl font-bold">Habilidades</h1>
-        <p class="py-6"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque tenetur itaque eos repudiandae nemo ratione sed repellat dolorem omnis nulla esse, officiis tempore error veritatis voluptatem incidunt quis totam vitae!</p>
-        <button class="btn btn-primary">Empecemos</button>
+  <div class="hero-content text-center">
+    <div class="max-w-5xl">
+      <div>
+        <h2 class="text-6xl font-bold mb-7 mt-20">Habilidades</h2>
       </div>
-    </div>
+
+      <div class="flex w-full flex-col lg:flex-row gap-5">
+
+        <div class="card card-compact bg-base-100 w-96 shadow-xl">
+
+          <div class="card-body">
+            <figure class="p-4">
+              <img src="https://go-skill-icons.vercel.app/api/icons?i=html,css,javascript,php,vite">
+            </figure>
+            <div class="divider"></div>
+            <div class="card p-2 flex justify-center items-center">
+              <h2 class="card-title p-1 text-2x1 ">Desarollador en frontend</h2>
+              <div class="badge badge-secondary">Mas de 3 años</div>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="divider lg:divider-horizontal"></div>
+
+        <div class="card card-compact bg-base-100 w-96 shadow-xl">
+
+          <div class="card-body">
+            <figure class="flex flex-col p-4">
+              <div>
+                <img src="https://go-skill-icons.vercel.app/api/icons?i=react,astro,sass">
+              </div>
+            <div>
+              <img src="https://go-skill-icons.vercel.app/api/icons?i=styledcomponents,chartjs,leaflet" alt="">
+            </div>
+            </figure>
+            <div class="divider"></div>
+            <div class="card p-2 flex justify-center items-center">
+              <h2 class="card-title p-1 text-2x1">Frameworks y librerias</h2>
+              <div class="badge badge-secondary">Mas de un año</div>
+            </div>
+          </div>
+
+        </div>
+        <div class="divider lg:divider-horizontal"></div>
+
+        <div class="card card-compact bg-base-100 w-96 shadow-xl">
+
+          <div class="card-body">
+            <figure class="flex flex-col p-4">
+              <img src="https://go-skill-icons.vercel.app/api/icons?i=jest,testinglibrary"> 
+            </figure>
+            <div class="divider"></div>
+            <div class="card p-2 flex justify-center items-center">
+              <h2 class="card-title p-1 text-2xl">Pruebas y testing</h2>
+              <div class="badge badge-secondary">Mas de un año</div>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="divider lg:divider-horizontal"></div>
+
+        <div class="card card-compact bg-base-100 w-96 shadow-xl">
+
+          <div class="card-body">
+            <figure class="flex flex-col p-4">
+              <img src="https://go-skill-icons.vercel.app/api/icons?i=mui,bootstrap,tailwindcss">
+            </figure>
+            <div class="divider"></div>
+            <div class="card p-2 flex justify-center items-center">
+              <h2 class="card-title p-1 text-2x1">Componentes UI</h2>
+              <div class="badge badge-secondary">Mas de 4 años</div>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="divider lg:divider-horizontal"></div>
+
+
+        <div class="card card-compact bg-base-100 w-96 shadow-xl">
+
+          <div class="card-body">
+            <figure class="flex flex-col p-4">
+              <img src="https://go-skill-icons.vercel.app/api/icons?i=pnpm,npm,yarn">
+            </figure>
+            <div class="divider"></div>
+            <div class="card p-2 flex justify-center items-center">
+              <h2 class="card-title p-1 text-2x1">Gestores de paquetes</h2>
+              <div class="badge badge-secondary">Mas de 2 años</div>
+            </div>
+          </div>
+
+        </div>
+
+
+        <div class="divider lg:divider-horizontal"></div>
+
+
+        <div class="card card-compact bg-base-100 w-96 shadow-xl">
+
+          <div class="card-body">
+            <figure class="flex flex-col p-4">
+              <img src="https://go-skill-icons.vercel.app/api/icons?i=figma,ps">
+            </figure>
+            <div class="divider"></div>
+            <div class="card p-2 flex justify-center items-center">
+              <h2 class="card-title p-1 text-2x1">Diseño y maquetado</h2>
+              <div class="badge badge-secondary">Mas de 4 años</div>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="divider lg:divider-horizontal"></div>
+
+
+        <div class="card card-compact bg-base-100 w-96 shadow-xl">
+
+          <div class="card-body">
+            <figure class="flex flex-col p-4">
+              <img src="https://go-skill-icons.vercel.app/api/icons?i=java,nodejs,python,anaconda,express">
+            </figure>
+            <div class="divider"></div>
+            <div class="card p-2 flex justify-center items-center">
+              <h2 class="card-title p-1 text-2x1">Lenguajes y frameworks</h2>
+              <div class="badge badge-secondary">Mas de 3 años</div>
+            </div>
+          </div>
+
+        </div>
+
+
+        <div class="divider lg:divider-horizontal"></div>
+
+        <div class="card card-compact bg-base-100 w-96 shadow-xl">
+
+          <div class="card-body">
+            <figure class="flex flex-col p-4">
+              <img src="https://go-skill-icons.vercel.app/api/icons?i=postman,supabase,postgres">
+              <img src="https://go-skill-icons.vercel.app/api/icons?i=mysql,sqlserver,git">
+              <img src="https://go-skill-icons.vercel.app/api/icons?i=authjs,zustand,swagger">
+            </figure>
+            <div class="divider"></div>
+            <div class="card p-2 flex justify-center items-center">
+              <h2 class="card-title p-1 text-2x1">Bases de datos y herramientas </h2>
+              <div class="badge badge-secondary">Mas de 1 años</div>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="divider lg:divider-horizontal"></div>
+
+        <div class="card card-compact bg-base-100 w-96 shadow-xl">
+
+          <div class="card-body">
+            <figure class="flex flex-col p-4">
+              <img src="https://go-skill-icons.vercel.app/api/icons?i=aws,github,firebase,netlify,vercel" alt="AWS"> 
+            </figure>
+            <div class="divider"></div>
+            <div class="card p-2 flex justify-center items-center">
+              <h2 class="card-title p-1 text-2x1">Servicios en la nube</h2>
+              <div class="badge badge-secondary">Mas de 1 años</div>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="divider lg:divider-horizontal"></div>
+
+
+        <div class="card card-compact bg-base-100 w-96 shadow-xl">
+
+          <div class="card-body">
+            <figure class="flex flex-col p-4">
+              <img src="https://go-skill-icons.vercel.app/api/icons?i=pbi" alt="PowerBI">
+            </figure>
+            <div class="divider"></div>
+            <div class="card p-2 flex justify-center items-center">
+              <h2 class="card-title p-1 text-2x1">Analisi de datos</h2>
+              <div class="badge badge-secondary">Mas de 1 años</div>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="divider lg:divider-horizontal"></div>
+
+
+        <div class="card card-compact bg-base-100 w-96 shadow-xl">
+
+          <div class="card-body">
+            <figure class="flex flex-col p-4">
+              <img src="https://go-skill-icons.vercel.app/api/icons?i=nestjs,typescript,vue">
+              <img src="https://go-skill-icons.vercel.app/api/icons?i=vue,angular,kubernetes,docker">
+              <img src="https://go-skill-icons.vercel.app/api/icons?i=mongodb,graphql,apollo,dotnet">
+            </figure>
+            <div class="divider"></div>
+            <div class="card p-2 flex justify-center items-center">
+              <h2 class="card-title p-1 text-2x1"></h2>
+              <div class="badge badge-secondary">En proceso</div>
+            </div>
+          </div>
+
+        </div>
+
+
+      </div>
+        </div>
   </div>
+</div>
