--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Footer from "../components/Footer.astro";
 ---
 
 <Layout title="Portafolio">
-    <header class="relative max-w-screen-2x1 mx-auto mt-5">
+    <header class="relative max-w-screen-2x1 mx-auto">
         <Navbar/>
         <div id="inicio">
             <Header/>
