--- a/src/components/theme/ThemeButton.astro
+++ b/src/components/theme/ThemeButton.astro
@@ -13,13 +13,14 @@ import { dataColorTheme } from "../../utils/dataColorsTheme.astro";
     <ul class="absolute top-20 p-2 flex flex-col gap-2 right-2 bg-base-100 rounded-md drop-shadow-2xl z-50 w-[12rem] h-[20.6rem] overflow-y-auto overflow-x-hidden"> 
       {dataColorTheme.map(({ colors, name }) => ( 
       <div class="flex items-center justify-start">
-        <button class="bg-base-100 rounded-btn text-base-content cursor-pointer block w-full outline-base-content text-start outline-offset-4" data-act-class="[&_svg]:visible" data-set-theme={name} data-theme={name} id="themeButton">
+        <button class=" rounded-btn text-base-content cursor-pointer block w-full outline-base-content text-start outline-offset-4" data-act-class="[&_svg]:visible" data-set-theme={name} data-theme={name} id="themeButton">
           <span class="col-span-5 row-span-3 row-start-1 flex items-center gap-2 px-4 py-3">
             <svg id="svg-theme" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" class="invisible h-3 w-3 shrink-0">
               <path d="M20.285 2l-11.285 11.567-5.286-5.011-3.714 3.716 9 8.728 15-15.285z"></path>
             </svg>
             <span class="flex-grow text-sm">{name}</span>
-            <span class="flex h-full shrink-0 flex-wrap p-0.5"> {colors.map((color) => ( <span class={`w-2 h-5 m-0.5 rounded-badge border ${color}`}></span> ))} </span>
+            <span class="flex h-full shrink-0 flex-wrap p-0.5"> 
+              {colors.map((color) => ( <span class={`w-2 h-3 m-0.5 rounded-badge border ${color}`}></span> ))} </span>
           </span>
         </button>
       </div> ))} </ul>
