--- a/src/utils/data.astro
+++ b/src/utils/data.astro
@@ -1,6 +1,10 @@
 ---
     export const dataListNavbar = [
         {
+            label: 'Inicio',
+            to: '#'
+        },
+        {
             label: 'Acerca de',
             to: '#about'
         },
