--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,15 +7,15 @@ import Bubble from "./Bubble.astro";
     <Bubble/>
       <div class="max-w-lg ">
         <h1 class="text-6xl xl:text-8xl lg:text-8x1 md:text-6xl sm:text-4xl font-bold">Hola soy</h1>
-        <span class="text-7xl xl:text-8xl lg:text-8x1 md:text-6xl sm:text-4xl leading-snug font-bold bg-clip-text text-transparent bg-gradient-to-r from-purple-600 via-purple-400 to-blue-500">Erick González</span>
+        <span class="text-7xl xl:text-8xl lg:text-8x1 md:text-6xl sm:text-4xl leading-snug font-bold bg-clip-text text-transparent bg-gradient-to-r from-primary via-secondary to-accent">Erick González</span>
         <p class="py-6 font-medium "> Experiencia en modelado y diseño de páginas web, así como herramientas o aspectos enfocado en Frontend y Backend, análisis y base de datos. </p>
-        <a href="#about" class="btn btn-primary">Bajar</a>
+        <a href="#about" class="btn btn-primary">Acerca de mi</a>
       </div>
     </div>
       <svg id="svg" class="absolute top-30 bottom-0 opacity-0.4" viewBox="0 0 1440 490" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150">
         <style>
           .path-0 {
-            animation: pathAnim-0 14s;
+            animation: pathAnim-0 10s ease-in-out;
             animation-timing-function: steps(500, end);
             animation-iteration-count: infinite;
           }
@@ -52,7 +52,7 @@ import Bubble from "./Bubble.astro";
         <path d="M 0,600 L 0,150 C 139.53571428571428,190.60714285714286 279.07142857142856,231.21428571428572 408,220 C 536.9285714285714,208.78571428571428 655.2500000000001,145.75 772,125 C 888.7499999999999,104.25000000000001 1003.9285714285713,125.7857142857143 1115,137 C 1226.0714285714287,148.2142857142857 1333.0357142857142,149.10714285714283 1440,150 L 1440,600 L 0,600 Z" stroke="none" stroke-width="0" fill="url(#gradient)" fill-opacity="0.4" class="transition-all duration-300 ease-in-out delay-150 path-0"></path>
         <style>
           .path-1 {
-            animation: pathAnim-1 7s;
+            animation: pathAnim-1 7s ease-in-out;
             animation-timing-function: steps(1000, end);
             animation-iteration-count: infinite;
           }
@@ -89,4 +89,3 @@ import Bubble from "./Bubble.astro";
         <path d="M 0,600 L 0,350 C 104.96428571428572,363.8571428571429 209.92857142857144,377.7142857142857 331,395 C 452.07142857142856,412.2857142857143 589.2500000000001,433 717,417 C 844.7499999999999,401 963.0714285714284,348.28571428571433 1082,331 C 1200.9285714285716,313.71428571428567 1320.4642857142858,331.85714285714283 1440,350 L 1440,600 L 0,600 Z" stroke="none" stroke-width="0" fill="url(#gradient2)" fill-opacity="1" class="transition-all duration-300 ease-in-out delay-150 path-1"></path>
       </svg>
   </div>
-  
