--- a/src/components/theme/ThemeButton.astro
+++ b/src/components/theme/ThemeButton.astro
@@ -4,13 +4,13 @@ import { dataColorTheme } from "../../utils/dataColorsTheme.astro";
 
 <li>
   <details id="theme-dropdown">
-    <summary class="list-none">
+    <summary class="list-none cursor-pointer">
       <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block h-5 w-5 stroke-current md:h-6 md:w-6">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21a4 4 0 01-4-4V5a2 2 0 012-2h4a2 2 0 012 2v12a4 4 0 01-4 4zm0 0h12a2 2 0 002-2v-4a2 2 0 00-2-2h-2.343M11 7.343l1.657-1.657a2 2 0 012.828 0l2.829 2.829a2 2 0 010 2.828l-8.486 8.485M7 17h.01"></path>
       </svg> 
-      <span class="hidden md:inline">Temas</span>
+      <span class="hidden md:inline cursor-pointer">Temas</span>
     </summary>
-    <ul class="absolute top-20 p-2 flex flex-col gap-2 right-2 bg-base-100 rounded-md drop-shadow-2xl z-50 w-[12rem] h-[20.6rem] overflow-y-auto overflow-x-hidden"> 
+    <ul class="absolute top-20 p-2 flex flex-col gap-2 right-2 bg-base-100 rounded-md z-50 w-[12rem] h-[20.6rem] overflow-y-auto overflow-x-hidden"> 
       {dataColorTheme.map(({ colors, name }) => ( 
       <div class="flex items-center justify-start">
         <button class=" rounded-btn text-base-content cursor-pointer block w-full outline-base-content text-start outline-offset-4" data-act-class="[&_svg]:visible" data-set-theme={name} data-theme={name} id="themeButton">
