feat: Se agrego el footer y enlaces a la pagina

--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -1,13 +1,22 @@
 ---
-
+import Bubble from "./Bubble.astro";
 ---
 
 
 <div class="hero bg-base-200 min-h-screen">
     <div class="hero-content text-center">
-      <div class="max-w-lg">
-        <h2 class="text-6xl font-bold">Contacto</h2>
-      
+      <Bubble class="top-40 bg-primary sm:left-32" classNameToBottom="bottom-20 right-20 bg-accent sm:right-72"/>
+      <div class="max-w-5xl">
+        <div>
+          <h2 class="text-6xl font-bold mb-32 mt-20">Contacto</h2>
+        </div>
+        <div class="mockup-browser bg-secondary border">
+          <div class="mockup-browser-toolbar">
+            <div class="input">muke78.com</div>
+          </div>
+          <div class="bg-base-200 flex justify-center px-4 py-16">Hello!</div>
+        </div>
+
       </div>
     </div>
   </div>
