fix: Se arregla el titulo de la seccion contacto

--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -11,7 +11,7 @@ import Bubble from './Bubble.astro';
     />
 
     <div class="max-w-5xl mx-auto">
-      <h2 class="text-6xl font-bold mb-32 mt-20">Proyectos</h2>
+      <h2 class="text-6xl font-bold mb-32 mt-20">Contacto</h2>
 
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
         {
